# Amazing-Rust

./: .gitignore  Cargo.toml  README.md
advance_learning/: Cargo.toml
advance_learning/src/: life_cycle_usage1.rs  life_cycle_usage2.rs  main.rs  ownership.rs
axum_learning/: Cargo.toml  README.md
base_learning/: Cargo.toml
base_learning/src/: enum_usage.rs  guess_num.rs  main.rs  option_usage.rs  ownership_usage.rs  slice_usage.rs  struct_usage.rs  vector_usage.rs
concurrency/: Cargo.toml  README.md
concurrency/examples/: ametrics.rs  dredis.rs  matrix.rs  metrics.rs  thread.rs
concurrency/src/: lib.rs  matrix.rs  vector.rs
concurrency/src/metrics/: amap.rs  metrics_default.rs  mod.rs
ecosystem/: Cargo.toml
ecosystem/examples/: axum_serde.rs  axum_tracing.rs  builder.rs  bytes.rs  derive_more_test.rs  enum.rs  err.rs  minginx.rs  serde.rs  serde1.rs  tokio1.rs  tokio2.rs
ecosystem/logs/: ecosystem.log.2024-11-24
error-info/: Cargo.toml
error-info/error-code/: Cargo.toml
error-info/error-code-derive/src/: error_info.rs  lib.rs
error-info/error-code/src/: lib.rs
metaprogramming/: Cargo.toml
metaprogramming/examples/: my_try.rs  my_vec.rs
rcli/: Cargo.toml  README.md  output.raw
rcli/docs/: class-1.excalidraw
rcli/src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
rcli/src/cli/: base64.rs  csv.rs  http.rs  jwt.rs  mod.rs  passwd.rs  sign.rs
rcli/src/process/: base64.rs  csv.rs  http.rs  jwt.rs  mod.rs  passwd.rs  sign.rs
rocket_learning/: Cargo.toml
rocket_learning/src/: main.rs
simple-redis/: Cargo.toml  README.md
simple-redis/src/: main.rs
simple-redis/src/resp/: frame.rs  mod.rs
src/: fun_usage.rs  guess_num.rs  main.rs  ownership_usage.rs  variable.rs
