[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["Zixin Zhou <zhouzixin@apache.org>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
csv = "1.3.0"
anyhow = "1.0.89"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
rand = "0.8.5"
zxcvbn = "3.1.0"
base64 = "0.22.1"
toml = "0.8.19"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
blake3 = "1.5.4"
chacha20poly1305 = "0.10.1"
